# ai-notebooks-summer-workshop

./: .gitignore  README.md  pyproject.toml
examples/: AI_Workshop_Semantic_Search.ipynb
examples/using_homemade_library/: example_videoreuse_dectector.ipynb
examples/using_script/: example_script_network.ipynb  requirements.txt
notebooks/: .env.example  Code Explainer.ipynb  Code_Explainer.ipynb  Code_Helper.ipynb  GroqAPI_Explainer.ipynb  Llama7b_Quantized.ipynb  Llama7b_Quantized_Code_Converter.ipynb  README.ipynb  bubble_sort_converted_by_llm_that_does_not_work.sh  codegemma.ipynb  llama7b_quantized.ipynb  utils.py
